add README.md & organize file structure

--- a/AboutMe.HTML
+++ b/AboutMe.HTML
@@ -1,8 +1,8 @@
 <html>
 	<div align="center">
 	<head>
-		<link rel="stylesheet" type="text/css" href="CSSTask1.4.1.css">
-		<title>My Biography</title>
+		<link rel="stylesheet" type="text/css" href="./css/CSSTask1.4.1.css">
+		<title>Biography</title>
 	</head>
 
 	<style type="text/css">
@@ -18,9 +18,9 @@
 		font-size: 300%;}
 	</style>
 
-		<h1><u>My Biography Index Page</u></h1>
+		<h1><u>Biography</u></h1>
 		<h2><u>Jonathan Guzman</u></h2>
-		
+
 	<style type="text/css">
 		nav{color: darkblue;
 		font-family: verdana;
@@ -37,10 +37,10 @@
 
 		<br><br>
 
-		<img src="jonathan.JPG">
-		
+		<img src="./img/jonathan.jpg">
+
 		<p>
-		Hello, my name is <a href="jonathan.jpg">Jonathan</a> I am 18 years old and I live in <a href="newyorkcity.jpg">New York City</a>.I am currently attending the <a href="https://perscholas.org/apply/codebridge">Codebridge</a> course at <a href="http://perscholas.org">Per Scholas</a>. I aspire to be a successful software/web developer. My hobbies include drawing and <a href="code.jpg">coding</a>. This concludes my biography.
+		Hello, my name is <a href="./img/jonathan.jpg">Jonathan</a> I am 18 years old and I live in <a href="./img/newyorkcity.jpg">New York City</a>.I am currently attending the <a href="https://perscholas.org/apply/codebridge">Codebridge</a> course at <a href="http://perscholas.org">Per Scholas</a>. I aspire to be a successful software/web developer. My hobbies include drawing and <a href="./img/code.jpg">coding</a>. This concludes my biography.
 		</p>
 
 		<br><br>
@@ -49,7 +49,7 @@
 
 		<div align="center">
 			<footer>
-			<link rel="stylesheet" type="text/css" href="CSSTask1.4.1.css">
+			<link rel="stylesheet" type="text/css" href="./css/CSSTask1.4.1.css">
 			<button><a href="ContactMe.html">Contact Me</a></button>
 			</footer>
 		</div>
