--- a/Location.HTML
+++ b/Location.HTML
@@ -1,8 +1,8 @@
 <html>
 	<div align="center">
 	<head>
-		<link rel="stylesheet" type="text/css" href="CSSTask1.4.1.css">
-		<title>Location Page</title>
+		<link rel="stylesheet" type="text/css" href="./css/CSSTask1.4.1.css">
+		<title>Location</title>
 	</head>
 
 	<style type="text/css">
@@ -24,7 +24,7 @@
 		font-size: 150%;}
 	</style>
 
-		<h1><u>Location Page</u></h1>
+		<h1><u>Location</u></h1>
 
 	<style type="text/css">
 		nav{color: darkblue;
@@ -44,11 +44,11 @@
 
 
 		<h3><u>This is the location of Per Scholas Bronx on the map</u></h3>
-		<img src="PerScholasMaps.png">	
+		<img src="./img/PerScholasMaps.png">
 		<h4><u>This is an image of the outside of Per Scholas Bronx</u></h4>
-		<img src="PerScholasImage.png">
-		
-		
+		<img src="./img/PerScholasImage.png">
+
+
 	</body>
 
 	</div>
