--- a/Resume.HTML
+++ b/Resume.HTML
@@ -2,8 +2,8 @@
 	<div align="center">
 
 	<head>
-		<link rel="stylesheet" type="text/css" href="CSSTask1.4.1.css">
-		<title>Resume Page</title>
+		<link rel="stylesheet" type="text/css" href="./css/CSSTask1.4.1.css">
+		<title>Resume</title>
 	</head>
 
 	<style type="text/css">
@@ -33,7 +33,7 @@
 		</nav>
 
 		<br><br>
-	</div>	
+	</div>
 
 	<style type="text/css">
 		b{font-family: verdana;
@@ -42,8 +42,7 @@
 
 	<p>
 		<div align="center"><b>JONATHAN GUZMAN</b></div>
-		<div align="center">308 West 94th Street Apt 128 New York, NY 10025 Cell: 347.322.6351 | jonguzman5@gmail.com  | linkedin.com/in/jonguzman5 </div>
-		
+
 		<br>
 
 		<div align="center"><b>ENTRY LEVEL SOFTWARE TESTER</b></div>
@@ -84,7 +83,7 @@
 		<table>
 		<td style="text-indent: 9cm;">&bull; Familiar with version control systems such as Git and GitHub integration</td>
 		</table>
-		
+
 		<br>
 
 		<div align="center"><b>TESTING EXPERIENCE</b></div>
@@ -121,7 +120,7 @@
 		<br>
 
 		<div align="center"><b>EDUCATION</b></div>
-     	
+
      	<table>
 		<td style="text-indent: 9cm;">Per Scholas Institute of Technology</td>
 		<th style="text-indent: 0.5cm;">Software Testing Education Program</th>
