--- a/index.HTML
+++ b/index.HTML
@@ -2,8 +2,8 @@
 	<div align="center">
 
 	<head>
-		<link rel="stylesheet" type="text/css" href="CSSTask1.4.1.css">
-		<title>Index Page</title>
+		<link rel="stylesheet" type="text/css" href="./css/CSSTask1.4.1.css">
+		<title>Index</title>
 	</head>
 
 	<style type="text/css">
@@ -16,9 +16,9 @@
 		font-size: 300%;}
 	</style>
 
-	<h1><u>Index Page</u></h1>
+	<h1><u>Index</u></h1>
 
-	</style>	
+	</style>
 		<style type="text/css">
 		nav{color: darkblue;
 		font-family: verdana;
@@ -34,7 +34,7 @@
 		</nav>
 
 		<br><br>
-				
+
 	</body>
 
 	</div>
