--- a/ContactMe.HTML
+++ b/ContactMe.HTML
@@ -3,8 +3,8 @@
 	<div align="center">
 
 	<head>
-		<link rel="stylesheet" type="text/css" href="CSSTask1.4.1.css">
-		<title>Contact Me Page</title>
+		<link rel="stylesheet" type="text/css" href="./css/CSSTask1.4.1.css">
+		<title>Contact</title>
 	</head>
 
 	<style type="text/css">
@@ -17,9 +17,9 @@
 		font-size: 300%;}
 	</style>
 
-	<h1><u>Contact Page</u></h1>
+	<h1><u>Contact</u></h1>
 
-	</style>	
+	</style>
 		<style type="text/css">
 		nav{color: darkblue;
 		font-family: verdana;
@@ -61,7 +61,7 @@
 		<label>Comments</label>
 		<br><br>
 		<textarea cols="50" rows="10"></textarea>
-	
+
 		<br><br>
 
 		<input type="submit" value="Submit">
@@ -69,7 +69,7 @@
 
 	</form>
 
-				
+
 	</body>
 	</div>
 
