--- a/Unit3.2Assignment+.html
+++ b/Unit3.2Assignment+.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="Unit3.2AssignmentStylesheet+.css">
+	<link rel="stylesheet" type="text/css" href="./css/Unit3.2AssignmentStylesheet+.css">
 	<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 	<title>Unit 3.2 Assignment</title>
 </head>
@@ -10,112 +10,112 @@
 <div class="penguins">
 <table class="adeliepenguin">
 	<tr>
-		<td><img src="adeliepenguin1.jpg" height="200px" width="200px"></td>
-		<td><img src="adeliepenguin2.jpg" height="200px" width="200px"></td>
-		<td><img src="adeliepenguin3.jpg" height="200px" width="200px"></td>
-		<td><img src="adeliepenguin4.jpg" height="200px" width="200px"></td>
-		<td><img src="adeliepenguin5.jpg" height="200px" width="200px"></td>
-		<td><img src="adeliepenguin6.jpg" height="200px" width="200px"></td>
-		<td><img src="adeliepenguin7.jpg" height="200px" width="200px"></td>
-		<td><img src="adeliepenguin8.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/adeliepenguin1.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/adeliepenguin2.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/adeliepenguin3.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/adeliepenguin4.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/adeliepenguin5.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/adeliepenguin6.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/adeliepenguin7.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/adeliepenguin8.jpg" height="200px" width="200px"></td>
 	</tr>
 </table>
 </div>
 <div class="penguins">
 <table class="chinstrappenguin">
 	<tr>
-		<td><img src="chinstrappenguin1.jpg" height="200px" width="200px"></td>
-		<td><img src="chinstrappenguin2.jpg" height="200px" width="200px"></td>
-		<td><img src="chinstrappenguin3.jpg" height="200px" width="200px"></td>
-		<td><img src="chinstrappenguin4.jpg" height="200px" width="200px"></td>
-		<td><img src="chinstrappenguin5.jpg" height="200px" width="200px"></td>
-		<td><img src="chinstrappenguin6.jpg" height="200px" width="200px"></td>
-		<td><img src="chinstrappenguin7.jpg" height="200px" width="200px"></td>
-		<td><img src="chinstrappenguin8.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/chinstrappenguin1.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/chinstrappenguin2.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/chinstrappenguin3.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/chinstrappenguin4.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/chinstrappenguin5.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/chinstrappenguin6.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/chinstrappenguin7.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/chinstrappenguin8.jpg" height="200px" width="200px"></td>
 	</tr>
 </table>
 </div>
 <div class="penguins">
 <table class="emperorpenguin">
 	<tr>
-		<td><img src="emperorpenguin1.jpg" height="200px" width="200px"></td>
-		<td><img src="emperorpenguin2.jpg" height="200px" width="200px"></td>
-		<td><img src="emperorpenguin3.jpg" height="200px" width="200px"></td>
-		<td><img src="emperorpenguin4.jpg" height="200px" width="200px"></td>
-		<td><img src="emperorpenguin5.jpg" height="200px" width="200px"></td>
-		<td><img src="emperorpenguin6.jpg" height="200px" width="200px"></td>
-		<td><img src="emperorpenguin7.jpg" height="200px" width="200px"></td>
-		<td><img src="emperorpenguin8.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/emperorpenguin1.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/emperorpenguin2.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/emperorpenguin3.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/emperorpenguin4.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/emperorpenguin5.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/emperorpenguin6.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/emperorpenguin7.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/emperorpenguin8.jpg" height="200px" width="200px"></td>
 	</tr>
 </table>
 </div>
 <div class="penguins">
 <table class="gentoopenguin">
 	<tr>
-		<td><img src="gentoopenguin1.jpg" height="200px" width="200px"></td>
-		<td><img src="gentoopenguin2.jpg" height="200px" width="200px"></td>
-		<td><img src="gentoopenguin3.jpg" height="200px" width="200px"></td>
-		<td><img src="gentoopenguin4.jpg" height="200px" width="200px"></td>
-		<td><img src="gentoopenguin5.jpg" height="200px" width="200px"></td>
-		<td><img src="gentoopenguin6.jpg" height="200px" width="200px"></td>
-		<td><img src="gentoopenguin7.jpg" height="200px" width="200px"></td>
-		<td><img src="gentoopenguin8.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/gentoopenguin1.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/gentoopenguin2.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/gentoopenguin3.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/gentoopenguin4.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/gentoopenguin5.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/gentoopenguin6.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/gentoopenguin7.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/gentoopenguin8.jpg" height="200px" width="200px"></td>
 	</tr>
 </table>
 </div>
 <div class="penguins">
 <table class="magellanicpenguin">
 	<tr>
-		<td><img src="magellanicpenguin1.jpg" height="200px" width="200px"></td>
-		<td><img src="magellanicpenguin2.jpg" height="200px" width="200px"></td>
-		<td><img src="magellanicpenguin3.jpg" height="200px" width="200px"></td>
-		<td><img src="magellanicpenguin4.jpg" height="200px" width="200px"></td>
-		<td><img src="magellanicpenguin5.jpg" height="200px" width="200px"></td>
-		<td><img src="magellanicpenguin6.jpg" height="200px" width="200px"></td>
-		<td><img src="magellanicpenguin7.jpg" height="200px" width="200px"></td>
-		<td><img src="magellanicpenguin8.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/magellanicpenguin1.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/magellanicpenguin2.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/magellanicpenguin3.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/magellanicpenguin4.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/magellanicpenguin5.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/magellanicpenguin6.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/magellanicpenguin7.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/magellanicpenguin8.jpg" height="200px" width="200px"></td>
 	</tr>
 </table>
 </div>
 <div class="penguins">
 <table class="northernrockhopperpenguin">
 	<tr>
-		<td><img src="northernrockhopperpenguin1.jpg" height="200px" width="200px"></td>
-		<td><img src="northernrockhopperpenguin2.jpg" height="200px" width="200px"></td>
-		<td><img src="northernrockhopperpenguin3.jpg" height="200px" width="200px"></td>
-		<td><img src="northernrockhopperpenguin4.jpg" height="200px" width="200px"></td>
-		<td><img src="northernrockhopperpenguin5.jpg" height="200px" width="200px"></td>
-		<td><img src="northernrockhopperpenguin6.jpg" height="200px" width="200px"></td>
-		<td><img src="northernrockhopperpenguin7.jpg" height="200px" width="200px"></td>
-		<td><img src="northernrockhopperpenguin8.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/northernrockhopperpenguin1.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/northernrockhopperpenguin2.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/northernrockhopperpenguin3.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/northernrockhopperpenguin4.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/northernrockhopperpenguin5.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/northernrockhopperpenguin6.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/northernrockhopperpenguin7.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/northernrockhopperpenguin8.jpg" height="200px" width="200px"></td>
 	</tr>
 </table>
 </div>
 <div class="penguins">
 <table class="royalpenguin">
 	<tr>
-		<td><img src="royalpenguin1.jpg" height="200px" width="200px"></td>
-		<td><img src="royalpenguin2.jpg" height="200px" width="200px"></td>
-		<td><img src="royalpenguin3.jpg" height="200px" width="200px"></td>
-		<td><img src="royalpenguin4.jpg" height="200px" width="200px"></td>
-		<td><img src="royalpenguin5.jpg" height="200px" width="200px"></td>
-		<td><img src="royalpenguin6.jpg" height="200px" width="200px"></td>
-		<td><img src="royalpenguin7.jpg" height="200px" width="200px"></td>
-		<td><img src="royalpenguin8.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/royalpenguin1.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/royalpenguin2.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/royalpenguin3.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/royalpenguin4.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/royalpenguin5.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/royalpenguin6.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/royalpenguin7.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/royalpenguin8.jpg" height="200px" width="200px"></td>
 	</tr>
 </table>
 </div>
 <div class="penguins">
 <table class="yelloweyedpenguin">
 	<tr>
-		<td><img src="yelloweyedpenguin1.jpg" height="200px" width="200px"></td>
-		<td><img src="yelloweyedpenguin2.jpg" height="200px" width="200px"></td>
-		<td><img src="yelloweyedpenguin3.jpg" height="200px" width="200px"></td>
-		<td><img src="yelloweyedpenguin4.jpg" height="200px" width="200px"></td>
-		<td><img src="yelloweyedpenguin5.jpg" height="200px" width="200px"></td>
-		<td><img src="yelloweyedpenguin6.jpg" height="200px" width="200px"></td>
-		<td><img src="yelloweyedpenguin7.jpg" height="200px" width="200px"></td>
-		<td><img src="yelloweyedpenguin8.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/yelloweyedpenguin1.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/yelloweyedpenguin2.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/yelloweyedpenguin3.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/yelloweyedpenguin4.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/yelloweyedpenguin5.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/yelloweyedpenguin6.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/yelloweyedpenguin7.jpg" height="200px" width="200px"></td>
+		<td><img src="./img/yelloweyedpenguin8.jpg" height="200px" width="200px"></td>
 	</tr>
 </table>
 </div>
@@ -139,7 +139,7 @@ function organize(n) {
 		x[i].style.display = "none";
 	}
 	x[organization-1].style.display = "block";
-	} 
+	}
 </script>
 
 </body></center>
